--- a/src/dev/styles/base/_reset.scss
+++ b/src/dev/styles/base/_reset.scss
@@ -1,4 +1,5 @@
 @use './_variable' as base;
+@use '../mixin' as mixin;
 
 
 // リセット
@@ -46,4 +47,14 @@ img{
 
 button {
     cursor: pointer;
+}
+
+a {
+    transition: opacity .2s;
+
+    @include mixin.media(hover) {
+        &:hover{
+            opacity: .6;
+        }
+    }
 }
