--- a/src/dev/styles/pages/_course.scss
+++ b/src/dev/styles/pages/_course.scss
@@ -17,6 +17,7 @@
     text-align: center;
     color: base.$font_sub_color;
     padding: 0 40px;
+    margin-top: 40px;
 }
 
 .un-aboutCourse__heading {
