--- a/src/dev/styles/pages/_news.scss
+++ b/src/dev/styles/pages/_news.scss
@@ -54,16 +54,18 @@
     }
 }
 
-
-
 // m-tabPanel
 //=====================================
 
 .m-tabPanel__hooks {
     margin-top: 2px;
     display: flex;
-    gap: 46px;
+    gap: 12px;
     justify-content: center;
+    
+    @include mixin.media(pc) {
+        gap: 46px;
+    }
 }
 
 .m-tabPanel__contents {
